MeetingSdkAgent/MeetingSdkAgent.h

	MEETINGSDKAGENT_API int JoinMeeting(int meetingId, bool autoSpeak, Context context);
	MEETING_MANAGE_API int GenericSyncId();
	MEETINGSDKAGENT_API int LeaveMeeting();
	MEETINGSDKAGENT_API int PublishCameraVideo(MEETINGMANAGE_PublishCameraParam param,
		bool isNeedCallBackMedia, Context context);
	MEETINGSDKAGENT_API int PublishDataCardVideo(MEETINGMANAGE_PublishCameraParam param,
		bool isNeedCallBackMedia, Context context);
	MEETINGSDKAGENT_API int PublishWinCaptureVideo(MEETINGMANAGE_WinCaptureVideoParam param,
		bool isNeedCallBackMedia, Context context);
	MEETINGSDKAGENT_API int PublishMicAudio(MEETINGMANAGE_publishMicParam param,
		Context context);
	MEETINGSDKAGENT_API int UnpublishCameraVideo(int resourceId, Context context);
	MEETINGSDKAGENT_API int UnpublishDataCardVideo(int resourceId, Context context);
	MEETINGSDKAGENT_API int UnpublishWinCaptureVideo(int resourceId, Context context);
	MEETINGSDKAGENT_API int UnpublishMicAudio(int resourceId, Context context);
	MEETINGSDKAGENT_API int	SubscribeVideo(MEETINGMANAGE_subscribeVideoParam param,
		bool isNeedCallBackMedia);
	MEETINGSDKAGENT_API int SubscribeAudio(MEETINGMANAGE_subscribeAudioParam param);
	MEETINGSDKAGENT_API int	Unsubscribe(int accountId, int resourceId);
	MEETINGSDKAGENT_API int AskForSpeak(char * speakerId, int speakerIdLen, Context context);
	MEETINGSDKAGENT_API int AskForStopSpeak(Context context);
	MEETINGSDKAGENT_API int StartLocalVideoRender(int resourceId, void* displayWindow, int aspx, int aspy);
	MEETINGSDKAGENT_API int StopLocalVideoRender(int resourceId);
	MEETINGSDKAGENT_API int StartRemoteVideoRender(int accountId, int resourceId, void* displayWindow, int aspx, int aspy);
	MEETINGSDKAGENT_API int StopRemoteVideoRender(int accountId, int resourceId);
	MEETINGSDKAGENT_API int StartYUVDataCallBack(int accountId, int resourceId);
	MEETINGSDKAGENT_API int StopYUVDataCallBack(int accountId, int resourceId);
	MEETINGSDKAGENT_API int SendUiTransparentMsg(int destAccount, StringStruct * data);
	MEETINGSDKAGENT_API int AsynSendUIMsg(int msgId, int dstUserAccount, const char *msgData);
	MEETINGSDKAGENT_API int HostChangeMeetingMode(int toMode);
	MEETINGSDKAGENT_API int HostKickoutUser(int accountId);
	MEETINGSDKAGENT_API int RaiseHandReq();
	MEETINGSDKAGENT_API int AskForMeetingLock(bool bToLock);
	MEETINGSDKAGENT_API int SendAudioSpeakerStatus(int isOpen, Context context);
	MEETINGSDKAGENT_API int HostOrderOneDoOpration(int toUserId, int oprateType, Context context);
	MEETINGSDKAGENT_API int ModifyNickName(const char * accountName, int nameLen, Context context);
	MEETINGSDKAGENT_API int HostOrderOneSpeak(char * toAccountId, int toLen,
		char * kickAccountId, int kickLen);
	MEETINGSDKAGENT_API int SetAudioMixRecvBufferNum(int AudioMaxBufferNum, int AudioStartVadBufferNum, int AudioStopVadBufferNum);
	MEETINGSDKAGENT_API int HostOrderOneStopSpeak(char * toAccountId, int toLen);
	MEETINGSDKAGENT_API int SetCurCpuInfo(int processCpu, int totalCpu);
	MEETINGSDKAGENT_API int PushMediaFrameData(int resourceId,
		MEETINGMANAGE_FrameType frameType, char * frameData, int dataLen, int orientation);
	MEETINGSDKAGENT_API int SetLowVideoStreamCodecParam(int frameWidth, int frameHeight, int bitrate, int frameRate);
	MEETINGSDKAGENT_API int AsynMicSendReq(int beSpeakedUserId);
	MEETINGSDKAGENT_API int AddDisplayWindow(int accountId, int resourceId, void *displayWindow, int aspx = 0, int aspy = 0);
	MEETINGSDKAGENT_API int RemoveDisplayWindow(int accountId, int resourceId, void *displayWindow, int aspx = 0, int aspy = 0);
	MEETINGSDKAGENT_API int PublishLiveStream(MEETINGMANAGE_PubLiveStreamParam param);
	MEETINGSDKAGENT_API int UnpublishLiveStream(int streamID);
	MEETINGSDKAGENT_API int StartLiveRecord(int streamID, char *url);
	MEETINGSDKAGENT_API int StopLiveRecord(int streamID);
	MEETINGSDKAGENT_API int UpdateLiveStreamVideoInfo(int streamID, MEETINGMANAGE_VideoStreamInfo* streamInfo, int streamnum);
	MEETINGSDKAGENT_API int UpdateLiveStreamAudioInfo(int streamID, MEETINGMANAGE_AudioStreamInfo *streamInfo, int streamnum);
	MEETINGSDKAGENT_API int  SetPublishDoubleVideoStreamStatus(int isEnabled);
	MEETINGSDKAGENT_API int  SetAutoAdjustEnableStatus(int isEnabled);
	MEETINGSDKAGENT_API int SetVideoClarity(int accountId, int resourceId, int clarityLevel);
	MEETINGSDKAGENT_API int SetVideoDisplayMode(int videoDisplayMode);
	MEETINGSDKAGENT_API int StopMp4Record(int streamID);
	MEETINGSDKAGENT_API int StartMp4Record(int streamID, char *filepath);
	MEETINGSDKAGENT_API int StartHost(const char * devmodel, char * configPath,
		int pathLen, Context context);
	MEETINGSDKAGENT_API int StopHost();
	MEETINGSDKAGENT_API int ConnectMeetingVDN(int accountId, char * accountName,
		int nameLen, char * token, int tokenLen, Context context);
	MEETINGSDKAGENT_API int SetAccountInfo(const char * accountName, int nameLen);
	MEETINGSDKAGENT_API int ConnectMeetingVDNAfterMeetingInstStarted(Context context);
	MEETINGSDKAGENT_API int DisConnectMeetingVDN();
	MEETINGSDKAGENT_API int MeetingInvite(int meetingId, int * accountIdList,
		int accountSize);