MeetingSdk.NetAgent/MeetingSdkAgent.cs


        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int JoinMeeting(int meetingId, bool autoSpeak, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int LeaveMeeting();

        #endregion

        #region 音视频发布和订阅

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int GenericSyncId();

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int PublishCameraVideo(MEETINGMANAGE_PublishCameraParam param, bool isNeedCallBackMedia, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int PublishDataCardVideo(MEETINGMANAGE_PublishCameraParam param, bool isNeedCallBackMedia, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int PublishWinCaptureVideo(MEETINGMANAGE_WinCaptureVideoParam param,
            bool isNeedCallBackMedia, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int PublishMicAudio(MEETINGMANAGE_publishMicParam param, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UnpublishCameraVideo(int resourceId, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UnpublishDataCardVideo(int resourceId, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UnpublishWinCaptureVideo(int resourceId, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UnpublishMicAudio(int resourceId, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SubscribeVideo(MEETINGMANAGE_subscribeVideoParam param, bool isNeedCallBackMedia);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SubscribeAudio(MEETINGMANAGE_subscribeAudioParam param);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int Unsubscribe(int accountId, int resourceId);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int PushMediaFrameData(int resourceId,
            MEETINGMANAGE_FrameType frameType, string frameData, int dataLen, int orientation);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StartYUVDataCallBack(int accountId, int resourceId);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StopYUVDataCallBack(int accountId, int resourceId);

        [Obsolete]
        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StartLocalVideoRender(int resourceId, IntPtr displayWindow, int aspx, int aspy);

        [Obsolete]
        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StopLocalVideoRender(int resourceId);

        [Obsolete]
        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StartRemoteVideoRender(int accountId, int resourceId, IntPtr displayWindow, int aspx, int aspy);

        [Obsolete]
        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StopRemoteVideoRender(int accountId, int resourceId);

        #endregion

        #region 会议中相关操作

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int AskForSpeak(string speakerId, int speakerIdLen, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int AskForStopSpeak(IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SendUiTransparentMsg(int destAccount, IntPtr data);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int AsynSendUIMsg(int msgId, int dstUserAccount, string msgData);


        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int AsynMicSendReq(int beSpeakedUserId);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int HostChangeMeetingMode(int toMode);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int HostKickoutUser(int accountId);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int RaiseHandReq();

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int AskForMeetingLock(bool bToLock);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int HostOrderOneSpeak(string toAccountId, int toLen,
            string kickAccountId, int kickLen);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int HostOrderOneStopSpeak(string toAccountId, int toLen);

        /// <summary>
        /// 发送本地扬声器状态
        /// </summary>
        /// <param name="isOpen"></param>
        /// <param name="ctx"></param>
        /// <returns></returns>
        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SendAudioSpeakerStatus(int isOpen, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int HostOrderOneDoOpration(int toUserId, int oprateType, IntPtr ctx);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int ModifyNickName(string accountName, int nameLen, IntPtr ctx);

        #endregion

        #region 录制，推流和双屏渲染

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StopMp4Record(int streamID);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StartMp4Record(int streamID, string filepath);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int PublishLiveStream(MEETINGMANAGE_PubLiveStreamParam param);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UnpublishLiveStream(int streamID);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StartLiveRecord(int streamID, string url);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StopLiveRecord(int streamID);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UpdateLiveStreamVideoInfo(int streamID, IntPtr streamInfosPtr, int streamnum);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int UpdateLiveStreamAudioInfo(int streamID, IntPtr streamInfosPtr, int streamnum);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int AddDisplayWindow(int accountId, int resourceId, IntPtr displayWindow, int aspx = 0, int aspy = 0);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int RemoveDisplayWindow(int accountId, int resourceId, IntPtr displayWindow, int aspx = 0, int aspy = 0);

        #endregion

        #region 自适应接口

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetAudioMixRecvBufferNum(int audioMaxBufferNum, int audioStartVadBufferNum, int audioStopVadBufferNum);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetLowVideoStreamCodecParam(int frameWidth, int frameHeight, int bitrate, int frameRate);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetPublishDoubleVideoStreamStatus(int isEnabled);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetAutoAdjustEnableStatus(int isEnabled);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetVideoClarity(int accountId, int resourceId, int clarityLevel);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetVideoDisplayMode(int videoDisplayMode);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetCurCpuInfo(int processCpu, int totalCpu);

        #endregion


        #region HostManage相关
        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StartHost(string devmodel, string configPath,int pathLen, IntPtr context);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int StopHost();

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int ConnectMeetingVDN(int accountId, string accountName,int nameLen, string token, int tokenLen, IntPtr context);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int SetAccountInfo(string accountName, int nameLen);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int ConnectMeetingVDNAfterMeetingInstStarted(IntPtr context);

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int DisConnectMeetingVDN();

        [DllImport(DllName, CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int MeetingInvite(int meetingId, IntPtr accountIdList,
            int accountSize);


        #endregion
    }
}
